--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,8 @@ services:
       - "7474:7474"
       - "7687:7687"
     environment:
-      NEO4J_AUTH: neo4j/password
+      NEO4J_USERNAME: neo4j
+      NEO4J_PASSWORD: password
     volumes:
       - neo4j-data:/data
 
