--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,8 +17,7 @@ services:
       - "7474:7474"
       - "7687:7687"
     environment:
-      NEO4J_USERNAME: neo4j
-      NEO4J_PASSWORD: password
+      NEO4J_AUTH: neo4j/password
     volumes:
       - neo4j-data:/data
 
