--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,21 @@
 version: '3'
 services:
+  neo4j-db:
+      image: neo4j:5.12.0
+      environment:
+        NEO4J_AUTH: neo4j/password
+        NEO4J_ACCEPT_LICENSE_AGREEMENT: yes
+      ports:
+        - "7474:7474"
+        - "7687:7687"
+      volumes:
+        - data:/data
+        - logs:/logs
+
   flask-app:
     build:
       context: .
-      dockerfile: Dockerfile
+    command: ./wait-for-it.sh -t 30 neo4j-db:7687 -- python run.py
     ports:
       - "5000:5000"
     volumes:
@@ -11,15 +23,6 @@ services:
     depends_on:
       - neo4j-db
 
-  neo4j-db:
-    image: neo4j:5.12.0
-    ports:
-      - "7474:7474"
-      - "7687:7687"
-    environment:
-      NEO4J_AUTH: neo4j/password
-    volumes:
-      - neo4j-data:/data
-
 volumes:
-  neo4j-data:
+  data:
+  logs:
